# rs-dir-stat

./: Cargo.toml
src/: file_system.rs  main.rs  visualization_widget.rs
