[package]
name = "rs-dir-stat"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"
lto = "fat"
opt-level = 3
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
[profile.release.package."*"]
opt-level = 3
codegen-units = 1
[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
codegen-units = 1

[dependencies.druid]
version = "0.8"
features = ["wayland", "im"]

[dependencies.tracing]
version = "0.1.37"

[dependencies.rayon]
version = "1.7.0"